# mvdeepsdf

./: .datasources.json  CMakeLists.txt  README.md  preprocess_data.py  train_deep_sdf.py
examples/bus/: Logs.pth  specs.json
examples/bus/LatentCodes/: 100.pth  1000.pth  500.pth  latest.pth
examples/cars/: Logs.pth  specs.json
examples/cars/LatentCodes/: 100.pth  1000.pth  2000.pth  500.pth
examples/lamps/: Logs.pth
examples/lamps/LatentCodes/: latest.pth
examples/lamps/OptimizerParameters/: latest.pth
examples/motors/: Logs.pth  specs.json
examples/motors/LatentCodes/: 100.pth  1000.pth  2000.pth  500.pth
examples/old_cars/: specs.json
examples/old_cars/LatentCodes/: 100.pth  1000.pth  500.pth  latest.pth
examples/old_pedestrain/: Logs.pth  specs.json
examples/old_pedestrain/LatentCodes/: 100.pth  1000.pth  500.pth  latest.pth
examples/pedestrain/: Logs.pth  specs.json
examples/pedestrain/LatentCodes/: 100.pth  1000.pth  2000.pth  500.pth
examples/planes/: Logs.pth
examples/planes/LatentCodes/: 100.pth  (+3 more)
examples/splits/: OLD_sv2_cars_train.json  sv2_bus_test.json  sv2_bus_train.json  sv2_cars_test.json  sv2_cars_train.json  sv2_lamps_train.json  sv2_motors_test.json  sv2_motors_train.json  sv2_pedestrain_test.json  sv2_pedestrain_train.json  sv2_planes_test.json  sv2_planes_train.json
src/: PreprocessMesh.cpp  SampleVisibleMeshSurface.cpp  Utils.cpp  Utils.h
test/1a2d2208f73d0531cec33e62192b66e5/: models.ply  models.pth
test/1a48f3b3c0ab0fdeba8e0a95fbfb7c9/: models.ply  models.pth
test/test_dsp_slam_1a48f3b3c0ab0fdeba8e0a95fbfb7c9 (copy)/: models.pth
(+4 files in other folders)
